--- a/css/_jquery.multiselect.css
+++ b/css/_jquery.multiselect.css
@@ -14,18 +14,8 @@
     margin-top: 1px;
     font-size: 13px;
     color: #aaa;
-    outline-offset: -2px;
+    outline: none;
     white-space: nowrap;
-}
-
-.ms-options-wrap > button > span {
-    display: inline-block;
-}
-
-.ms-options-wrap > button[disabled] {
-    background-color: #e5e9ed;
-    color: #808080;
-    opacity: 0.6;
 }
 
 .ms-options-wrap > button:after {
@@ -40,10 +30,6 @@
     margin-top: -3px;
 }
 
-.ms-options-wrap.ms-has-selections > button {
-    color: #333;
-}
-
 .ms-options-wrap > .ms-options {
     position: absolute;
     left: 0;
@@ -53,12 +39,6 @@
     background: white;
     z-index: 2000;
     border: 1px solid #aaa;
-    overflow: auto;
-    visibility: hidden;
-}
-
-.ms-options-wrap.ms-active > .ms-options {
-    visibility: visible
 }
 
 .ms-options-wrap > .ms-options > .ms-search input {
@@ -83,17 +63,6 @@
     margin: 4px 5px;
 }
 
-.ms-options-wrap > .ms-options > ul,
-.ms-options-wrap > .ms-options > ul > li.optgroup ul {
-    list-style-type: none;
-    padding: 0;
-    margin: 0;
-}
-
-.ms-options-wrap > .ms-options > ul li.ms-hidden {
-    display: none;
-}
-
 .ms-options-wrap > .ms-options > ul > li.optgroup {
     padding: 5px;
 }
@@ -111,34 +80,18 @@
     position: relative;
     display: inline-block;
     width: 100%;
-    padding: 4px;
+    padding: 8px 4px;
     margin: 1px 0;
-    border: 1px dotted transparent;
 }
 
-.ms-options-wrap > .ms-options > ul label.focused,
+.ms-options-wrap > .ms-options > ul li.selected label,
 .ms-options-wrap > .ms-options > ul label:hover {
     background-color: #efefef;
-    border-color: #999;
-}
-
-.ms-options-wrap > .ms-options > ul li.selected label {
-    background-color: #efefef;
-    border-color: transparent;
 }
 
 .ms-options-wrap > .ms-options > ul input[type="checkbox"] {
-    margin: 0 5px 0 0;
+    margin-right: 5px;
     position: absolute;
-    left: 4px;
+    left: 0px;
     top: 7px;
-}
-
-.ms-options-wrap > .ms-options.hide-checkbox > ul input[type="checkbox"] {
-    position: absolute !important;
-    height: 1px;
-    width: 1px;
-    overflow: hidden;
-    clip: rect(1px 1px 1px 1px);
-    clip: rect(1px, 1px, 1px, 1px);
 }
